--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 pydantic = "*"
 strawberry-graphql = {extras = ["fastapi"], version = "*"}
 uvicorn = "*"
+isort = "*"
+black = "*"
+flake8 = "*"
 
 [dev-packages]
 
